--- a/serverless.yml
+++ b/serverless.yml
@@ -15,3 +15,6 @@ functions:
       - http:
           path: alert
           method: post
+    environment:
+      SLACK_TOKEN: ${env:SLACK_TOKEN}
+      SLACK_CHANNEL_ID: ${env:SLACK_CHANNEL_ID}
