--- a/serverless.yml
+++ b/serverless.yml
@@ -5,7 +5,7 @@ frameworkVersion: '3'
 provider:
   name: aws
   runtime: ruby2.7
-  profile: personal
+  profile: ${env:DEPLOYMENT_AWS_PROFILE}
   region: us-east-1
 
 functions:
