--- a/serverless.yml
+++ b/serverless.yml
@@ -9,13 +9,17 @@ provider:
   region: us-east-1
 
 functions:
+  authorize:
+    handler: lib/handler.authorize
+    environment:
+      TOKEN: ${env:TOKEN}
   alert:
     handler: lib/handler.post_notifications
     events:
       - http:
           path: notifications
           method: post
+          authorizer: authorize
     environment:
-      TOKEN: ${env:TOKEN}
       SLACK_TOKEN: ${env:SLACK_TOKEN}
       SLACK_CHANNEL_ID: ${env:SLACK_CHANNEL_ID}
