--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy master branch
+name: Deploy main branch
 
 on:
   push:
@@ -18,6 +18,7 @@ jobs:
     - run: npm i -g serverless
     - run: sls deploy --stage production
       env:
+        DEPLOYMENT_AWS_PROFILE: default
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         TOKEN: ${{ secrets.SLACK_MESSENGER_BEARER_TOKEN }}
